# rms

./: .gitignore  Cargo.toml  README.md  output
src/: lib.rs  main.rs
src/cmd/: mod.rs
src/indexer/: mod.rs  tantivy.rs
src/message/: maildir.rs  mod.rs
src/readmail/: display.rs  mod.rs
src/stores/: kv.rs  message_store.rs  mod.rs  search.rs  tag.rs
src/stores/_impl/: kv.rs  mod.rs  rocksdb.rs  tantivy.rs
src/terminal/: events.rs  mod.rs
src/terminal/input/: list.rs  mod.rs  reader.rs  search.rs
src/terminal/store/: list.rs  mod.rs  reader.rs  search.rs  tags.rs
src/terminal/views/: email_read.rs  mod.rs  search_results.rs
termui/: Cargo.toml
termui/src/terminal/: events.rs  mod.rs
termui/src/terminal/input/: list.rs  mod.rs  search.rs
termui/src/terminal/store/: list.rs  mod.rs  reader.rs  search.rs  tags.rs
termui/src/terminal/views/: mod.rs  search_results.rs
